# topologicook

./: .gitignore  package-lock.json  package.json
app/dynamic/[id]/: page.tsx
app/prototype/voice/: page.tsx  voice-button.tsx
back/: CONTRIBUTING.md  README.md  pyproject.toml
back/src/topologicook/: env.py  experiment.py  pull_food_data.py  pull_raw_metadata.py  pull_recipes.py  recipe.py  to_recipe_data.py
