[project]
name = "topologicook"
version = "0.1.0"
description = "Food helper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "recipe-scrapers>=15.0.0",
    "httpx>=0.27.0",
    "orjson>=3.10.7",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
